--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/ts-plugin": "^1.10.4",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.6.1"
   },
