--- a/.github/workflows/deploy-on-pull-request.yml
+++ b/.github/workflows/deploy-on-pull-request.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
+          wranglerVersion: "4.14.1"
           environment: preview
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
