--- a/src/content/project/ideas/ideas.json
+++ b/src/content/project/ideas/ideas.json
@@ -26,7 +26,7 @@
           "Helpline suggestions"
         ],
         "tags": ["mental health", "journal", "supabase", "charts"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Supabase", "Chart.js", "Magic Link Auth"]
       },
       {
@@ -40,7 +40,7 @@
           "Simple Flask webhook"
         ],
         "tags": ["iot", "sms", "flood", "alert"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["ESP32", "Python Flask", "Twilio"]
       },
       {
@@ -82,7 +82,7 @@
           "Caption overlay in browser"
         ],
         "tags": ["accessibility", "speech-to-text", "whisper"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Web Audio API", "OpenAI Whisper", "JavaScript"]
       },
       {
@@ -110,7 +110,7 @@
           "Hourly refresh"
         ],
         "tags": ["healthcare", "blood bank", "maps"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "Leaflet.js", "Scraper"]
       },
       {
@@ -124,7 +124,7 @@
           "Google Sheets integration"
         ],
         "tags": ["restaurant", "nfc", "orders"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "Google Sheets API", "NFC"]
       },
       {
@@ -153,7 +153,7 @@
           "Auto-caption generation"
         ],
         "tags": ["fun", "meme", "api"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "Imgflip API"]
       },
       {
@@ -195,7 +195,7 @@
           "Live contribution prompts"
         ],
         "tags": ["github", "opensource", "fun"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "GitHub API"]
       },
       {
@@ -209,7 +209,7 @@
           "Download option"
         ],
         "tags": ["twitter", "svg", "poster"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "SVG.js"]
       },
       {
@@ -237,7 +237,7 @@
           "RGB LED syncing"
         ],
         "tags": ["music", "iot", "led"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Web Bluetooth", "AudioContext", "RGB LED"]
       },
       {
@@ -251,7 +251,7 @@
           "Purely client-side"
         ],
         "tags": ["chess", "gif", "animation"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "GIF.js"]
       },
       {
@@ -265,7 +265,7 @@
           "Redirect service"
         ],
         "tags": ["emoji", "url shortener", "fun"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "QR Code API"]
       },
       {
@@ -279,7 +279,7 @@
           "Export/share"
         ],
         "tags": ["meme", "collage", "fun"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "Canvas API"]
       },
 
@@ -294,7 +294,7 @@
           "Weekly footprint report"
         ],
         "tags": ["sustainability", "sms", "climate"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Twilio", "Airtable", "Python"]
       },
       {
@@ -322,7 +322,7 @@
           "Airplane-mode demo"
         ],
         "tags": ["disaster", "offline", "pwa"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["JavaScript", "Service Worker", "PWA"]
       },
       {
@@ -336,7 +336,7 @@
           "Buzzer feedback"
         ],
         "tags": ["hardware", "iot", "accessibility"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Arduino Nano", "Ultrasonic Sensor", "C++"]
       },
       {
@@ -364,7 +364,7 @@
           "Funny GIF responses"
         ],
         "tags": ["iot", "slack", "plants"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["ESP8266", "Slack API", "Python"]
       },
       {
@@ -378,7 +378,7 @@
           "No-login form"
         ],
         "tags": ["ewaste", "ngo", "sustainability"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["React", "Firebase", "Node.js"]
       },
       {
@@ -406,7 +406,7 @@
           "Food-share integration"
         ],
         "tags": ["food", "waste", "barcode"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["ML Kit", "Firebase", "React Native"]
       },
       {
@@ -420,7 +420,7 @@
           "Vendor redemption"
         ],
         "tags": ["social good", "qr", "community"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["React", "Firebase", "QR Code API"]
       },
 
@@ -435,7 +435,7 @@
           "Database sync"
         ],
         "tags": ["education", "attendance", "ai"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Python", "OpenCV", "Firebase"]
       },
       {
@@ -463,7 +463,7 @@
           "Text-to-speech pronunciation"
         ],
         "tags": ["language", "chat", "webrtc"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["WebRTC", "React", "Supabase"]
       },
       {
@@ -477,7 +477,7 @@
           "Sensor integration for steps"
         ],
         "tags": ["climate", "tracker", "habits"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["React Native", "Chart.js", "Firebase"]
       },
       {
@@ -505,7 +505,7 @@
           "Web calendar view"
         ],
         "tags": ["events", "community", "calendar"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["React", "Twilio", "Google Calendar API"]
       },
       {
@@ -519,7 +519,7 @@
           "Spotify playlist generation"
         ],
         "tags": ["music", "playlist", "sentiment"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Spotify API", "React", "Python"]
       },
       {
@@ -547,7 +547,7 @@
           "Offline pre-loaded data"
         ],
         "tags": ["ar", "tourism", "education"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["AR.js", "React", "Wikipedia API"]
       },
       {
@@ -561,7 +561,7 @@
           "Shopping list with cost estimates"
         ],
         "tags": ["food", "budget", "planner"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["React", "Firebase", "LocalStorage"]
       },
       {
@@ -575,7 +575,7 @@
           "Career suggestions with PDF report"
         ],
         "tags": ["career", "education", "whatsapp", "ai"],
-        "status": "WIP",
+        "status": "Planned",
         "tech_stack": ["Twilio WhatsApp API", "Python", "PDFKit"]
       },
       {
@@ -603,7 +603,7 @@
           "Shareable PDF report"
         ],
         "tags": ["career", "profile", "students"],
-        "status": "Completed",
+        "status": "Planned",
         "tech_stack": ["React", "Python", "PDFKit"]
       }
     ]
