--- a/.github/workflows/deploy-on-pull-request.yml
+++ b/.github/workflows/deploy-on-pull-request.yml
@@ -1,9 +1,9 @@
 name: Deploy to CF Pages on Pull Request
 
-on:
-  push:
-  pull_request:
-    types: [opened, updated]
+# on:
+#   push:
+#   pull_request:
+#     types: [opened, updated]
 
 jobs:
   deploy:
