--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.3",
+    "@astrojs/cloudflare": "^12.6.9",
+    "@astrojs/mdx": "^4.3.6",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@tailwindcss/vite": "^4.0.15",
-    "astro": "^5.6.1"
+    "@tailwindcss/vite": "^4.1.14",
+    "astro": "^5.14.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.15",
+    "@tailwindcss/postcss": "^4.1.14",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "wrangler": "^4.4.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "wrangler": "^4.41.0"
   }
 }
