--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/ts-plugin": "^1.10.4",
     "@tailwindcss/vite": "^4.1.14",
-    "astro": "^5.14.1"
+    "astro": "^5.14.1",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
