fix: updated shiny github profile

--- a/src/data/authors.yaml
+++ b/src/data/authors.yaml
@@ -13,7 +13,7 @@ bhavani:
 
 shiny:
   displayName: "Shiny"
-  githubUsername: "shiny"
+  githubUsername: "shinysu"
   bio: "Community organizer and developer"
 
 dorai:
